init(js): select elements

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- place -->
         <aside class="place-container">
           <p class="time-zone" id="time-zone">Europe/Zagreb</p>
-          <p id="country" class="country">coordinates</p>
+          <p class="country" id="country">coordinates</p>
         </aside>
       </section>
     </main>
